<resources>
    <string name="app_name">Hagglex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="email_address">Email Address</string>
    <string name="password_hint">Password (Min. 8 Characters)</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="new_user_create_acct">New user? Create a new account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="create_a_username">Create a username</string>
    <string name="phone_number_hint">Enter your phone number</string>
    <string name="referral_code_optional">Referral code (optional)</string>
    <string name="privacy_policy">By signing up, you agree to HaggleX terms and privacy policy.</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="verify_email_text">We just sent a verification code to your email. Please enter code</string>
    <string name="verification_code">Verification code</string>
    <string name="verify_me">Verify me</string>
    <string name="expire_code">This code will expire in 10 minutes</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="setup_complete">Setup Complete</string>
    <string name="thank_you">Thank you for setting up your HaggleX account</string>
    <string name="start_exploring">Start Exploring</string>
    <string name="markets">Markets</string>
    <string name="do_more_with_hagglex">Do more with HaggleX</string>
    <string name="trending_crypto_news">Trending crypto news</string>
    <string name="view_all_stories">View all stories</string>
    <string name="haggle_hag">Haggle (HAG)</string>
    <string name="ngn_380">NGN 380</string>
    <string name="dummy_increase">+2.34%</string>
    <string name="send_money_instantly">Send money instantly</string>
    <string name="send_crypto">Send crypto to another wallet</string>
    <string name="dummy_news">Blockchain Bites: BTC on Ethereum, DeFi’s latest stablecoin, the currency cold wars</string>
    <string name="dummy_time">6hrs ago</string>
    <string name="category">Category:</string>
    <string name="defi">Defi</string>
    <string name="hagglex">HaggleX</string>
    <string name="total_portfolio_balance">Total portfolio balance</string>
    <string name="dummy_balance">$0.0</string>
    <string name="ngn">NGN</string>
    <string name="usd">USD</string>
    <string name="wallet">Wallet</string>
    <string name="exchange">Exchange</string>
    <string name="cryptosave">CryptoSave</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="sign_up">Sign up</string>
    <string name="sv">SV</string>
</resources>