<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_tv"
        app:counterMaxLength="20"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email_address"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="#AB47BC"
        app:boxStrokeWidthFocused="1dp"
        android:textColorHint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/welcome_tv"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:paddingStart="0dp"
            android:textSize="16sp"
            android:paddingEnd="0dp"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_tf"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="#AB47BC"
        app:boxStrokeWidthFocused="1dp"
        android:textColorHint="@color/white"
        android:hint="@string/password_hint"
        >

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/welcome_tv"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_tf"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_tv"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/gold"
        android:text="@string/log_in"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/new_user_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:layout_marginHorizontal="16dp"
        android:text="@string/new_user_create_acct"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>