<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.SignupFragment">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:navigationIcon="@drawable/back_btn" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/create_a_new_account"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/create_account"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/email_address"
                    android:paddingBottom="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_et"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/password_hint"
                    android:paddingBottom="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_et"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/create_a_username"
                    android:paddingBottom="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_et"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/grey_bg"
                    android:paddingTop="4dp"
                    app:ccp_rememberLastSelection="true"
                    app:ccp_showArrow="false"
                    app:ccp_showNameCode="false" />

                <EditText
                    android:id="@+id/phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_et"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_toEndOf="@id/ccp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/phone_number_hint"
                    android:paddingBottom="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/referral_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ccp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/referral_code_optional"
                    android:paddingBottom="20dp" />

                <TextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signUp_btn"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/privacy_policy"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUp_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/referral_et"
                    android:layout_margin="32dp"
                    android:paddingVertical="16dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/gradient_end" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>
