<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SuccessFragment">

    <ImageView
        android:id="@+id/tick_iv"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:src="@drawable/gold_tick" />

    <TextView
        android:id="@+id/setup_complete_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tick_iv"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:text="@string/setup_complete"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/expire_code_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_complete_tv"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/black"
        android:text="@string/thank_you"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="88dp"
        android:paddingVertical="16dp"
        android:text="@string/start_exploring"
        android:textAllCaps="true"
        android:textColor="@color/black" />

</RelativeLayout>