<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.VerifyFragment">

    <Toolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:navigationIcon="@drawable/back_btn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="@font/karla_bold"
        android:gravity="center"
        android:text="@string/verify_your_account"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/email_et"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="32dp"
                android:src="@drawable/tick_icon" />

            <TextView
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/verify_email_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:hint="@string/verification_code"
                android:textColorHint="@color/black"
                app:boxStrokeColor="#AB47BC"
                app:boxStrokeWidthFocused="1dp"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:hintTextColor="@color/gradient_start">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/code_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/welcome_tv"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:paddingVertical="16dp"
                android:text="@string/verify_me"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:backgroundTint="@color/gradient_end" />

            <TextView
                android:id="@+id/expire_code_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:backgroundTint="@color/black"
                android:text="@string/expire_code"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/resend_code_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/black"
                android:paddingBottom="48dp"
                android:text="@string/resend_code"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>